--- a/.github/workflows/go.yaml
+++ b/.github/workflows/go.yaml
@@ -2,9 +2,9 @@ name: Go
 
 on:
   push:
-    branches: [ working ]
+    branches: [ master ]
   pull_request:
-    branches: [ working ]
+    branches: [ master ]
 
 env:
     IMAGE_REGISTRY: ghcr.io/${{ github.repository_owner }}
