--- a/.github/workflows/go.yaml
+++ b/.github/workflows/go.yaml
@@ -23,19 +23,11 @@ jobs:
     - name: Upload complementary images to GHCR
       run: |
         echo $REGISTRY_PASSWORD | docker login $IMAGE_REGISTRY -u $REGISTRY_USER --password-stdin 
-        # export LIST='
-        #   # pause:3.7
-        #   # dns/k8s-dns-node-cache:1.21.1
-        #   coredns/coredns:v1.9.3
-        #   # cpa/cluster-proportional-autoscaler-amd64:1.8.5
-        #   metrics-server/metrics-server:v0.6.2
-        #   # kube-apiserver:v1.25.5
-        #   # kube-controller-manager:v1.25.5
-        #   # kube-scheduler:v1.25.5
-        #   # kube-proxy:v1.25.5
-        # '
         export LIST='
+          pause:3.7
+          dns/k8s-dns-node-cache:1.21.1
           coredns/coredns:v1.9.3
+          cpa/cluster-proportional-autoscaler-amd64:1.8.5
           metrics-server/metrics-server:v0.6.2
         '
         for IMAGE in $LIST
