--- a/.github/workflows/go.yaml
+++ b/.github/workflows/go.yaml
@@ -10,7 +10,7 @@ env:
     IMAGE_REGISTRY: ghcr.io/${{ github.repository_owner }}
     REGISTRY_USER: ${{ github.actor }}
     REGISTRY_PASSWORD: ${{ github.token }}
-    KUBE_GIT_VERSION: v1.25.5
+    KUBE_GIT_VERSION: v1.29.0
     INTEGRATION_STREAM: a
     
 jobs:
@@ -20,25 +20,29 @@ jobs:
     steps:
     - uses: actions/checkout@v3
 
-    # - name: Upload docker.io images to GHCR
-    #   run: |
-    #     echo $REGISTRY_PASSWORD | docker login $IMAGE_REGISTRY -u $REGISTRY_USER --password-stdin 
-    #     export LIST='
-    #       library/nginx:1.23.2-alpine
-    #     '
-    #     for IMAGE in $LIST
-    #     do
-    #       docker pull docker.io/$IMAGE
-    #       docker tag docker.io/$IMAGE $IMAGE_REGISTRY/$INTEGRATION_STREAM/$IMAGE
-    #       docker push $IMAGE_REGISTRY/$INTEGRATION_STREAM/$IMAGE
-    #     done
-    #     docker images
+    - name: Upload docker.io images to GHCR
+      run: |
+        echo $REGISTRY_PASSWORD | docker login $IMAGE_REGISTRY -u $REGISTRY_USER --password-stdin 
+        export LIST='
+          library/nginx:1.25.2-alpine
+        '
+        for IMAGE in $LIST
+        do
+          docker pull docker.io/$IMAGE
+          docker tag docker.io/$IMAGE $IMAGE_REGISTRY/$INTEGRATION_STREAM/$IMAGE
+          docker push $IMAGE_REGISTRY/$INTEGRATION_STREAM/$IMAGE
+        done
+        docker images
 
     - name: Upload registry.k8s.io images to GHCR
       run: |
         echo $REGISTRY_PASSWORD | docker login $IMAGE_REGISTRY -u $REGISTRY_USER --password-stdin 
         export LIST='
-          dns/k8s-dns-node-cache:1.22.18
+          pause:3.9
+          dns/k8s-dns-node-cache:1.22.20
+          coredns/coredns:v1.9.3
+          cpa/cluster-proportional-autoscaler:v1.8.8
+          metrics-server/metrics-server:v0.6.4
         '
         for IMAGE in $LIST
         do
@@ -50,25 +54,23 @@ jobs:
 
 
         # export LIST='
-        #   pause:3.8
-        #   dns/k8s-dns-node-cache:1.22.18
+        #   pause:3.9
+        #   dns/k8s-dns-node-cache:1.22.20
         #   coredns/coredns:v1.9.3
-        #   cpa/cluster-proportional-autoscaler-amd64:1.8.5
-        #   metrics-server/metrics-server:v0.6.2
+        #   cpa/cluster-proportional-autoscaler:v1.8.8
+        #   metrics-server/metrics-server:v0.6.4
         # '
 
+    - name: Create Github Release
+      id: create_release
+      uses: actions/create-release@v1
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      with:
+        tag_name: ${{ env.KUBE_GIT_VERSION }}
+        release_name: Release ${{ env.KUBE_GIT_VERSION }}
+        draft: false
+        prerelease: false
 
-
-    # - name: Create Github Release
-    #   id: create_release
-    #   uses: actions/create-release@v1
-    #   env:
-    #     GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-    #   with:
-    #     tag_name: ${{ env.KUBE_GIT_VERSION }}
-    #     release_name: Release ${{ env.KUBE_GIT_VERSION }}
-    #     draft: false
-    #     prerelease: false
-
-    # - name: Get GitHub Release URL
-    #   run: echo ${{ steps.create_release.outputs.upload_url }} # This pulls from the CREATE RELEASE step above, referencing it's ID to get its outputs object, which include a `upload_url`. See this blog post for more info: https://jasonet.co/posts/new-features-of-github-actions/#passing-data-to-future-steps 
+    - name: Get GitHub Release URL
+      run: echo ${{ steps.create_release.outputs.upload_url }} # This pulls from the CREATE RELEASE step above, referencing it's ID to get its outputs object, which include a `upload_url`. See this blog post for more info: https://jasonet.co/posts/new-features-of-github-actions/#passing-data-to-future-steps 
