--- a/.github/workflows/go.yaml
+++ b/.github/workflows/go.yaml
@@ -10,7 +10,7 @@ env:
     IMAGE_REGISTRY: ghcr.io/${{ github.repository_owner }}
     REGISTRY_USER: ${{ github.actor }}
     REGISTRY_PASSWORD: ${{ github.token }}
-    KUBE_GIT_VERSION: v1.29.0
+    KUBE_GIT_VERSION: v1.28.5
     INTEGRATION_STREAM: a
     
 jobs:
@@ -20,37 +20,37 @@ jobs:
     steps:
     - uses: actions/checkout@v3
 
-    - name: Upload docker.io images to GHCR
-      run: |
-        echo $REGISTRY_PASSWORD | docker login $IMAGE_REGISTRY -u $REGISTRY_USER --password-stdin 
-        export LIST='
-          library/nginx:1.25.2-alpine
-        '
-        for IMAGE in $LIST
-        do
-          docker pull docker.io/$IMAGE
-          docker tag docker.io/$IMAGE $IMAGE_REGISTRY/$INTEGRATION_STREAM/$IMAGE
-          docker push $IMAGE_REGISTRY/$INTEGRATION_STREAM/$IMAGE
-        done
-        docker images
+    # - name: Upload docker.io images to GHCR
+    #   run: |
+    #     echo $REGISTRY_PASSWORD | docker login $IMAGE_REGISTRY -u $REGISTRY_USER --password-stdin 
+    #     export LIST='
+    #       library/nginx:1.25.2-alpine
+    #     '
+    #     for IMAGE in $LIST
+    #     do
+    #       docker pull docker.io/$IMAGE
+    #       docker tag docker.io/$IMAGE $IMAGE_REGISTRY/$INTEGRATION_STREAM/$IMAGE
+    #       docker push $IMAGE_REGISTRY/$INTEGRATION_STREAM/$IMAGE
+    #     done
+    #     docker images
 
-    - name: Upload registry.k8s.io images to GHCR
-      run: |
-        echo $REGISTRY_PASSWORD | docker login $IMAGE_REGISTRY -u $REGISTRY_USER --password-stdin 
-        export LIST='
-          pause:3.9
-          dns/k8s-dns-node-cache:1.22.20
-          coredns/coredns:v1.9.3
-          cpa/cluster-proportional-autoscaler:v1.8.8
-          metrics-server/metrics-server:v0.6.4
-        '
-        for IMAGE in $LIST
-        do
-          docker pull registry.k8s.io/$IMAGE
-          docker tag registry.k8s.io/$IMAGE $IMAGE_REGISTRY/$INTEGRATION_STREAM/$IMAGE
-          docker push $IMAGE_REGISTRY/$INTEGRATION_STREAM/$IMAGE
-        done
-        docker images
+    # - name: Upload registry.k8s.io images to GHCR
+    #   run: |
+    #     echo $REGISTRY_PASSWORD | docker login $IMAGE_REGISTRY -u $REGISTRY_USER --password-stdin 
+    #     export LIST='
+    #       pause:3.9
+    #       dns/k8s-dns-node-cache:1.22.20
+    #       coredns/coredns:v1.9.3
+    #       cpa/cluster-proportional-autoscaler:v1.8.8
+    #       metrics-server/metrics-server:v0.6.4
+    #     '
+    #     for IMAGE in $LIST
+    #     do
+    #       docker pull registry.k8s.io/$IMAGE
+    #       docker tag registry.k8s.io/$IMAGE $IMAGE_REGISTRY/$INTEGRATION_STREAM/$IMAGE
+    #       docker push $IMAGE_REGISTRY/$INTEGRATION_STREAM/$IMAGE
+    #     done
+    #     docker images
 
 
         # export LIST='
