--- a/.github/workflows/go.yaml
+++ b/.github/workflows/go.yaml
@@ -10,7 +10,7 @@ env:
     IMAGE_REGISTRY: ghcr.io/${{ github.repository_owner }}
     REGISTRY_USER: ${{ github.actor }}
     REGISTRY_PASSWORD: ${{ github.token }}
-    KUBE_GIT_VERSION: v1.26.2
+    KUBE_GIT_VERSION: v1.30.6
     INTEGRATION_STREAM: a
     
 jobs:
@@ -34,36 +34,36 @@ jobs:
     #     done
     #     docker images
 
-    - name: Upload registry.k8s.io images to GHCR
-      run: |
-        echo $REGISTRY_PASSWORD | docker login $IMAGE_REGISTRY -u $REGISTRY_USER --password-stdin 
-        export LIST='
-          cpa/cluster-proportional-autoscaler:v1.8.8
-        '
-        for IMAGE in $LIST
-        do
-          docker pull registry.k8s.io/$IMAGE
-          docker tag registry.k8s.io/$IMAGE $IMAGE_REGISTRY/$INTEGRATION_STREAM/$IMAGE
-          docker push $IMAGE_REGISTRY/$INTEGRATION_STREAM/$IMAGE
-        done
-        docker images
+    # - name: Upload registry.k8s.io images to GHCR
+    #   run: |
+    #     echo $REGISTRY_PASSWORD | docker login $IMAGE_REGISTRY -u $REGISTRY_USER --password-stdin 
+    #     export LIST='
+    #       cpa/cluster-proportional-autoscaler:v1.8.8
+    #     '
+    #     for IMAGE in $LIST
+    #     do
+    #       docker pull registry.k8s.io/$IMAGE
+    #       docker tag registry.k8s.io/$IMAGE $IMAGE_REGISTRY/$INTEGRATION_STREAM/$IMAGE
+    #       docker push $IMAGE_REGISTRY/$INTEGRATION_STREAM/$IMAGE
+    #     done
+    #     docker images
 
-        # Kunernetes 1.26.2 Kubespray 2.23
-        #   pause:3.9
-        #   dns/k8s-dns-node-cache:1.22.18
-        #   coredns/coredns:v1.9.3
-        #   cpa/cluster-proportional-autoscaler:v1.8.8
-        #   metrics-server/metrics-server:v0.6.4
-        # '
+    #     # Kunernetes 1.26.2 Kubespray 2.23
+    #     #   pause:3.9
+    #     #   dns/k8s-dns-node-cache:1.22.18
+    #     #   coredns/coredns:v1.9.3
+    #     #   cpa/cluster-proportional-autoscaler:v1.8.8
+    #     #   metrics-server/metrics-server:v0.6.4
+    #     # '
 
-        # Kubernetes 1.28.5 Kubespray main
-        # export LIST='
-        #   pause:3.9
-        #   dns/k8s-dns-node-cache:1.22.28
-        #   coredns/coredns:v1.10.1
-        #   cpa/cluster-proportional-autoscaler:v1.8.8
-        #   metrics-server/metrics-server:v0.6.4
-        # '
+    #     # Kubernetes 1.28.5 Kubespray main
+    #     # export LIST='
+    #     #   pause:3.9
+    #     #   dns/k8s-dns-node-cache:1.22.28
+    #     #   coredns/coredns:v1.10.1
+    #     #   cpa/cluster-proportional-autoscaler:v1.8.8
+    #     #   metrics-server/metrics-server:v0.6.4
+    #     # '
 
     - name: Create Github Release
       id: create_release
